# thesis

./: .gitignore  pyproject.toml
agents/base/: factory.py
agents/core/: constants.py
agents/core/fewshots/: commonsenseqa.py  gsm8k.py  gsmhard.py  math_algebra.py  math_number_theory.py  np_calendar_scheduling.py  np_meeting_planning.py  np_trip_planning.py
agents/core/prompts/: gsm8k.py  gsmhard.py  math_algebra.py  math_number_theory.py  np_calendar_scheduling.py  np_meeting_planning.py  np_trip_planning.py
agents/core/reflection/: agent.py  functional.py  output.py  reflect.py
agents/core/reflection/prompts/: commonsenseqa.py  general.py  gsm8k.py  gsmhard.py  np_calendar_scheduling.py  np_meeting_planning.py  np_trip_planning.py
agents/core/reflection/strategies/: base.py  code.py  math.py  math_qa.py  meeting_plan.py  qa.py  schedule.py  trip_plan.py
agents/eval/: calendar_scheduling.py  math.py  meeting_planning.py  qa.py  trip_planning.py
agents/eval/natural_plan/: evaluate_meeting_planning.py
experiments/: _run_experiment.py
experiments/_utils/: data_preprocessing.py  logging.py  model_evaluation.py  plotting.py
experiments/notebooks/GSM/GSM8K/few-shot/: plots.ipynb
experiments/notebooks/GSM/GSM8K/inter-model-zero-shot/: gemini-1.5-flash_corrected_by_gpt-4o.ipynb  gpt-4o_corrected_by_gemini-1.5-flash.ipynb  plots.ipynb
experiments/notebooks/GSM/GSM8K/zero-shot/: plots.ipynb
experiments/notebooks/MATH/algebra/: intermediate_algebra_test.json
experiments/notebooks/MATH/algebra/inter-model-zero-shot/: gemini-1.5-flash_corrected_by_gpt-4o.ipynb  gpt-4o corrected by gemini-1.5-flash.ipynb  plots.ipynb
experiments/notebooks/MATH/algebra/zero-shot/: plots.ipynb
experiments/notebooks/MATH/number_theory/inter-model-zero-shot/: gemini-1.5-flash_corrected_by_gpt-4o.ipynb  gpt-4o_corrected_by_gemini-1.5-flash.ipynb  (+1 more)
experiments/utils/: logging.py
(+117 files in other folders)
